--- a/CSS/8.3_positioning.css
+++ b/CSS/8.3_positioning.css
@@ -26,7 +26,7 @@
     height: 130px;
     margin-left: 300px;
     margin-top: 340px;
-    position: absolute;
+    position: absolute
     background-color: white;
 }
 
