--- a/CSS/11.2_flex_basic_1.css
+++ b/CSS/11.2_flex_basic_1.css
@@ -1,27 +1,25 @@
-* {
-    box-sizing: border-box;
-}
-.container {
+
+body {
+    width: 100%;
     display:flex;
-    height: 50vh;
-    justify-content: space-between;
+    justify-content: center;
+    margin-top: 15rem;
 }
 
-
-.item-1 {
+#box1 {
     width: 150px;
     height: 20vh;
     background: green;
     
 }
 
-.item-2 {
+#box2 {
     width: 150px;
     height: 20vh;
     background: blue;
 }
 
-.item-3 {
+#box3 {
     width: 150px;
     height: 20vh;
     background:red;
