--- a/CSS/12.4_cool_border.css
+++ b/CSS/12.4_cool_border.css
@@ -16,24 +16,47 @@ body {
 .box1:before {
     content: "";
     position: absolute;
-    width: 100%;
-    height:100%;
+    width: 25%;
+    height:25%;
     border: 0.55rem solid red; 
-    top: 0;
-    left:0;
+    top:14rem;
+    left:9.3rem;
 }
 .box1:after {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 25%;
+    height: 25%;
     border: 0.55rem solid red; 
-    top:0;
-    left:0;
+    top:3.5rem;
+    left:0rem;
 }
 
+.box2 {
+    width: 14rem;
+    height: 14rem;
+    position: relative;
+}
 
+.box2:before{
+    content: '';
+    position: absolute;
+    width: 25%;
+    height: 25%;
+    border: 0.55rem solid red; 
+    top:3.5rem;
+    left:9rem;
+}
 
+.box2:after{
+    content: '';
+    position: absolute;
+    width: 25%;
+    height: 25%;
+    border: 0.55rem solid red; 
+    top:14rem;
+    left:0rem;
+}
 
 
  .box1:before {
@@ -44,8 +67,18 @@ body {
 .box1:after {
     border-right: none;
     border-bottom: none;
-} 
+}
 
+
+.box2:before {
+    border-left: none;
+    border-bottom: none;
+}
+
+.box2:after {
+    border-right: none;
+    border-top: none;
+}
 
 
 .contet {
@@ -56,7 +89,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+    top:4rem;
+    right: 0.55rem;
+} 
 
 
 
