--- a/CSS/14.3_navbar_animation.css
+++ b/CSS/14.3_navbar_animation.css
@@ -24,7 +24,7 @@ body{
     align-self: center;
     position: relative;
     justify-content:space-evenly;
-    padding-bottom:3rem;
+
     
 }
 
@@ -38,6 +38,7 @@ body{
     width: 5.3rem;
     height: 2rem;
     overflow: hidden;
+    margin:0 1rem;
 }
 
 .navbar ul li a {
@@ -65,9 +66,10 @@ body{
     top:0;
     right:0;
     border-bottom:0.1rem solid black;
-    transform: translateX(3.4rem);
-    transition: all 2s;
+    transform: translateX(5rem);
+    transition: all 0.5s;
     visibility: hidden;
+    opacity: 0.1;
 }
 
 .navbar ul li a:after{
@@ -81,21 +83,26 @@ body{
     width: 100%;
     height: 100%;
     top:0;
-    right:0;
+    left:0;
     border-top:0.1rem solid black;
-    transform: translateX(-3.4rem);
-    transition: all 2s;
+    transform: translateX(-5rem);
+    transition: all 0.5s;
     visibility: hidden;
+    opacity: 0.1;
+
 }
 
 
 .navbar ul li a:hover:before{
     visibility: visible;
     transform: translateX(0);
-    
+    transition: 1s;  
+    opacity: 1;  
 }
 
 .navbar ul li a:hover:after{
     visibility: visible;
     transform: translateX(0);
+    transition: 1s;
+    opacity: 1;
 }
